tests/fixtures/valid/typed_refs/train.etcm
spec TrainRun:
  model: ModelConfig
  max_steps: int = Field(default=10, gt=0)

impl smoke:
  $model: model.etcm#tiny
  max_steps: 2

impl default:
  $model: model.etcm
