tests/fixtures/invalid/constraint_length.etcm
spec Tags:
  tags: list[str] = Field(min_length=2)

impl default:
  tags: ["smoke"]
